--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,32 +1,36 @@
 # Financial Leak Detector - Backend Dependencies
+# Python 3.13+ Compatible
+
 # Core Framework
 fastapi>=0.109.0
-uvicorn>=0.25.0
+uvicorn>=0.27.0
 python-multipart>=0.0.6
 
 # Database
 sqlalchemy>=2.0.23
 
 # Data Processing
-pandas>=2.1.0
+pandas>=2.2.0
 numpy>=1.26.0
+openpyxl>=3.1.0
 
 # Authentication & Security
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-cryptography>=41.0.0
+passlib==1.7.4
+bcrypt==4.1.2
+cryptography>=42.0.0
 
 # Google APIs (Gmail Integration)
 google-api-python-client>=2.100.0
-google-auth>=2.23.0
-google-auth-oauthlib>=1.1.0
-google-auth-httplib2>=0.1.1
-
-# Gemini AI (for smart transaction parsing)
-google-generativeai>=0.3.0
+google-auth>=2.28.0
+google-auth-oauthlib>=1.2.0
+google-auth-httplib2>=0.2.0
 
 # Email & Validation
 email-validator>=2.1.0
+
+# AI & ML
+google-genai>=0.3.0
 beautifulsoup4>=4.12.0
 
 # Environment & Config
@@ -36,4 +40,3 @@ pydantic-settings>=2.1.0
 
 # HTTP Client
 requests>=2.31.0
-httpx>=0.25.0
