--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money-manager-frontend",
+  "name": "spend-analyser-frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,15 +10,16 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0",
     "axios": "^1.6.0",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
-    "graphql": "^16.8.1",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.30.2",
     "recharts": "^2.15.4",
+    "tailwind-merge": "^3.4.0",
     "terser": "^5.44.1"
   },
   "devDependencies": {
